hexagonal + unit test
