# docs/swagger.json
@@ -4,17 +4,9 @@
         "description": "Esta es una API para subir, transformar y consultar imágenes.",
         "title": "API de Procesamiento de Imágenes",
         "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "Soporte API",
-            "email": "soporte@example.com"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
+        "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/images/{id}": {
@@ -45,25 +37,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ImageDetailResponse"
+                            "$ref": "#/definitions/dto.ImageDetailResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -100,7 +92,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.TransformationRequest"
+                            "$ref": "#/definitions/dto.TransformationRequest"
                         }
                     }
                 ],
@@ -114,19 +106,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -195,7 +187,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/dto.LoginRequest"
                         }
                     }
                 ],
@@ -203,13 +195,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseLogin"
+                            "$ref": "#/definitions/dto.LoginResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -235,7 +227,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/dto.RegisterRequest"
                         }
                     }
                 ],
@@ -246,7 +238,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -283,25 +275,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.UploadResponse"
+                            "$ref": "#/definitions/dto.UploadResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -342,19 +334,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.PaginatedImagesResponse"
+                            "$ref": "#/definitions/dto.PaginatedImagesResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -362,7 +354,7 @@
         }
     },
     "definitions": {
-        "models.ErrorResponse": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -371,47 +363,7 @@
                 }
             }
         },
-        "models.Image": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "format": {
-                    "description": "Formato (jpeg, png, etc.)",
-                    "type": "string"
-                },
-                "height": {
-                    "description": "Alto de la imagen",
-                    "type": "integer"
-                },
-                "image_id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "path": {
-                    "description": "Ruta en el servidor",
-                    "type": "string"
-                },
-                "size": {
-                    "description": "Tamaño en bytes",
-                    "type": "integer"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_name": {
-                    "type": "string"
-                },
-                "width": {
-                    "description": "Ancho de la imagen",
-                    "type": "integer"
-                }
-            }
-        },
-        "models.ImageDetailResponse": {
+        "dto.ImageDetailResponse": {
             "type": "object",
             "properties": {
                 "format": {
@@ -440,13 +392,58 @@
                 }
             }
         },
-        "models.PaginatedImagesResponse": {
+        "dto.ImageItem": {
+            "type": "object",
+            "properties": {
+                "format": {
+                    "type": "string"
+                },
+                "height": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "width": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PaginatedImagesResponse": {
             "type": "object",
             "properties": {
                 "images": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Image"
+                        "$ref": "#/definitions/dto.ImageItem"
                     }
                 },
                 "limit": {
@@ -460,88 +457,77 @@
                 }
             }
         },
-        "models.ResponseLogin": {
+        "dto.RegisterRequest": {
             "type": "object",
             "properties": {
-                "token": {
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
         },
-        "models.TransformationRequest": {
+        "dto.TransformationRequest": {
             "type": "object",
             "properties": {
                 "transformations": {
-                    "description": "Transformaciones a aplicar a la imagen",
                     "type": "object",
                     "properties": {
                         "crop": {
-                            "description": "Recortar la imagen",
                             "type": "object",
                             "properties": {
                                 "height": {
-                                    "description": "Alto del recorte\nexample: 300",
                                     "type": "integer"
                                 },
                                 "width": {
-                                    "description": "Ancho del recorte\nexample: 400",
                                     "type": "integer"
                                 },
                                 "x": {
-                                    "description": "Posición X del recorte\nexample: 100",
                                     "type": "integer"
                                 },
                                 "y": {
-                                    "description": "Posición Y del recorte\nexample: 50",
                                     "type": "integer"
                                 }
                             }
                         },
                         "filters": {
-                            "description": "Filtros a aplicar",
                             "type": "object",
                             "properties": {
                                 "grayscale": {
-                                    "description": "Convertir a escala de grises\nexample: true",
                                     "type": "boolean"
                                 },
                                 "sepia": {
-                                    "description": "Aplicar filtro sepia\nexample: false",
                                     "type": "boolean"
                                 }
                             }
                         },
                         "format": {
-                            "description": "Formato de salida de la imagen (png, jpg, gif)\nexample: jpg",
                             "type": "string"
                         },
                         "resize": {
-                            "description": "Redimensionar la imagen",
                             "type": "object",
                             "properties": {
                                 "height": {
-                                    "description": "Alto en píxeles\nexample: 600",
                                     "type": "integer"
                                 },
                                 "width": {
-                                    "description": "Ancho en píxeles\nexample: 800",
                                     "type": "integer"
                                 }
                             }
                         },
                         "rotate": {
-                            "description": "Rotar la imagen (en grados)\nexample: 90",
                             "type": "number"
                         }
                     }
                 }
             }
         },
-        "models.UploadResponse": {
+        "dto.UploadResponse": {
             "type": "object",
             "properties": {
                 "image": {
-                    "$ref": "#/definitions/models.UploadedImageDetail"
+                    "$ref": "#/definitions/dto.UploadedImageDetail"
                 },
                 "message": {
                     "type": "string",
@@ -549,7 +535,7 @@
                 }
             }
         },
-        "models.UploadedImageDetail": {
+        "dto.UploadedImageDetail": {
             "type": "object",
             "properties": {
                 "format": {
@@ -575,17 +561,6 @@
                 "width": {
                     "type": "integer",
                     "example": 1920
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "user_name": {
-                    "type": "string"
                 }
             }
         }
